// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VolumeControl mute button mutes and unmutes volume: after muting 1`] = `
<DocumentFragment>
  .emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-4 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-3:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #e4e4e4;
  border-radius: 100vw;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
}

.emotion-5 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-5 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-5:hover:not(:disabled) {
  border-width: 2px;
}

.emotion-5:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-11 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

<div
    class="emotion-12"
    data-testid="volume-control"
  >
    <div
      class="emotion-4"
      data-testid="min-label"
    >
      <button
        class="emotion-3"
        data-testid="mute-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume mute
              </title>
              <path
                d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="emotion-6"
      data-testid="volume-control-track"
      values="0"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0"
        class="emotion-5"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
        values="0"
      />
    </div>
    <div
      class="emotion-11"
      data-testid="max-label"
    >
      <button
        class="emotion-3"
        data-testid="volumeup-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume up
              </title>
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeControl mute button mutes and unmutes volume: after unmuting 1`] = `
<DocumentFragment>
  .emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-4 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-3:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #e4e4e4;
  border-radius: 100vw;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
}

.emotion-5 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-5 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-5:hover:not(:disabled) {
  border-width: 2px;
}

.emotion-5:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-11 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

<div
    class="emotion-12"
    data-testid="volume-control"
  >
    <div
      class="emotion-4"
      data-testid="min-label"
    >
      <button
        class="emotion-3"
        data-testid="mute-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume down
              </title>
              <path
                d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="emotion-6"
      data-testid="volume-control-track"
      values="0.8"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.8"
        class="emotion-5"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
        values="0.8"
      />
    </div>
    <div
      class="emotion-11"
      data-testid="max-label"
    >
      <button
        class="emotion-3"
        data-testid="volumeup-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume up
              </title>
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeControl renders horizontal volume control by default 1`] = `
<DocumentFragment>
  .emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-4 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-3:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #e4e4e4;
  border-radius: 100vw;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
}

.emotion-5 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-5 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-5:hover:not(:disabled) {
  border-width: 2px;
}

.emotion-5:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-11 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

<div
    class="emotion-12"
    data-testid="volume-control"
  >
    <div
      class="emotion-4"
      data-testid="min-label"
    >
      <button
        class="emotion-3"
        data-testid="mute-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume down
              </title>
              <path
                d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="emotion-6"
      data-testid="volume-control-track"
      values="1"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="1"
        class="emotion-5"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
        values="1"
      />
    </div>
    <div
      class="emotion-11"
      data-testid="max-label"
    >
      <button
        class="emotion-3"
        data-testid="volumeup-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume up
              </title>
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeControl renders vertical volume control by default 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-3:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-5 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-5 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-5:hover:not(:disabled) {
  border-width: 2px;
}

.emotion-5:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-4 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-top: 8px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #e4e4e4;
  border-radius: 100vw;
  margin: calc(32px/2) calc(32px/2 - 12px/2);
  height: 100%;
  width: 12px;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
}

.emotion-11 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 8px;
}

<div
    class="emotion-12"
    data-testid="volume-control"
  >
    <div
      class="emotion-4"
      data-testid="min-label"
    >
      <button
        class="emotion-3"
        data-testid="mute-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume down
              </title>
              <path
                d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="emotion-6"
      data-testid="volume-control-track"
      values="1"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="1"
        class="emotion-5"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
        values="1"
      />
    </div>
    <div
      class="emotion-11"
      data-testid="max-label"
    >
      <button
        class="emotion-3"
        data-testid="volumeup-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume up
              </title>
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeControl volumeup button increases volume to 1: volume at 100% 1`] = `
<DocumentFragment>
  .emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-4 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  width: auto;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  color: #0A68C1;
  border-radius: 100vw;
  min-height: 8px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  padding: 8px 8px;
  width: 32px;
  height: 32px;
  margin: 8px 0;
}

.emotion-3:disabled {
  cursor: not-allowed;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-3:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3::before {
  content: '';
  position: absolute;
  left: 0;
  top: -8px;
  width: 100%;
  height: 48px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #e4e4e4;
  border-radius: 100vw;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
}

.emotion-5 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-5 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-5:hover:not(:disabled) {
  border-width: 2px;
}

.emotion-5:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-11 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

<div
    class="emotion-12"
    data-testid="volume-control"
  >
    <div
      class="emotion-4"
      data-testid="min-label"
    >
      <button
        class="emotion-3"
        data-testid="mute-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume down
              </title>
              <path
                d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="emotion-6"
      data-testid="volume-control-track"
      values="1"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="1"
        class="emotion-5"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
        values="1"
      />
    </div>
    <div
      class="emotion-11"
      data-testid="max-label"
    >
      <button
        class="emotion-3"
        data-testid="volumeup-button"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              viewBox="0 0 24 24"
            >
              <title>
                Volume up
              </title>
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
